js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/lib2/l2.4.kt
interface Bar : Foo {
    override fun getSomething() = 4
}
